# Ralchemist

./: .gitignore  Dockerfile  README.md  data_injector.py  dev.env  magic_of_fastapi.db  magic_of_fastapi.test.db  prod.env  pyproject.toml  sample_data_cleaner.py  treeoutput.txt
.github/workflows/: python-app.yml
RAlchemist/: app.py  settings.py
RAlchemist/db/: operations.py  setup.py  sql_operations.py
RAlchemist/routers/: recipes.py
RAlchemist/smarts/: recipe_finder.py
RecipeAlchemy/: app.py
RecipeAlchemy/db/: operations.py  setup.py  sql_operations.py
RecipeAlchemy/routers/: recipes.py
RecipeAlchemy/smarts/: recipe_finder.py
app/: settings.py
app/db/: setup.py  sql_operations.py
app/routers/: recipes.py
app/schemas/: recipe.py
app/smarts/: recipe_finder.py
magicoffastapi/: app.py
magicoffastapi/db/: operations.py  setup.py  sql_operations.py  tables.py
magicoffastapi/routers/: recipes.py
magicoffastapi/schemas/: recipe.py
magicoffastapi/smarts/: recipe_finder.py
src/: app.py
src/db/: operations.py  setup.py  sql_operations.py
src/routers/: recipes.py
src/smarts/: recipe_finder.py
tests/: conftest.py  full-dataset.json  recipe_samples.json  test_operations.py  test_recipe_finder.py  test_recipes_router.py
