[tool.poetry]
name = "magicoffastapi"
version = "0.1.0"
description = ""
authors = ["Joe <jessex7@pm.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
uvicorn = "^0.20.0"
sqlalchemy = "^2.0.3"
python-dotenv = "^0.21.1"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
httpx = "^0.23.3"
pytest = "^7.3.1"
coverage = "^7.2.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
